--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-redux": "^7.1.7",
+    "@types/react-dom": "^16.9.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.1",
     "typescript": "~4.1.5"
   },
   "scripts": {
@@ -38,5 +38,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-redux": "^7.1.18",
+    "@types/styled-components": "^5.1.14"
   }
 }
